--- a/source/tech/examples/diagram.html
+++ b/source/tech/examples/diagram.html
@@ -15,31 +15,31 @@
 </style>
 </head>
 <body>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/cytoscape/2.7.12/cytoscape.min.js"></script>
-	<script src="https://cdn.rawgit.com/cpettitt/dagre/v0.7.4/dist/dagre.min.js"></script>
-	<script src="https://cdn.rawgit.com/cytoscape/cytoscape.js-dagre/1.3.0/cytoscape-dagre.js"></script>
-	<div id="cy"/>
-	<script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/cytoscape/2.7.12/cytoscape.min.js"></script>
+  <script src="https://cdn.rawgit.com/cpettitt/dagre/v0.7.4/dist/dagre.min.js"></script>
+  <script src="https://cdn.rawgit.com/cytoscape/cytoscape.js-dagre/1.3.0/cytoscape-dagre.js"></script>
+  <div id="cy"/>
+  <script>
 function render_diagram(data) {
-	var cy = cytoscape({
-	  container: document.getElementById('cy'),
-	  style: [ // the stylesheet for the graph
-		{
-		  selector: 'node',
-		  style: {
-			'width': 'label',
-			'height': 'label',
-			'shape': 'roundrectangle',
-			'background-color': '#fff',
-			'label': 'data(label)',
-			'text-wrap': 'wrap',
-			'text-border-color': '#000',
-			'text-border-width': 1,
-			'text-border-opacity': 1,
-			'text-valign': 'center',
-			'text-halign': 'center',
-		  }
-		},
+  var cy = cytoscape({
+    container: document.getElementById('cy'),
+    style: [ // the stylesheet for the graph
+    {
+      selector: 'node',
+      style: {
+      'width': 'label',
+      'height': 'label',
+      'shape': 'roundrectangle',
+      'background-color': '#fff',
+      'label': 'data(label)',
+      'text-wrap': 'wrap',
+      'text-border-color': '#000',
+      'text-border-width': 1,
+      'text-border-opacity': 1,
+      'text-valign': 'center',
+      'text-halign': 'center',
+      }
+    },
 
     {
       selector: 'node.collapsed',
@@ -65,52 +65,52 @@ function render_diagram(data) {
       }
     },
 
-		{
-		  selector: 'edge',
-		  style: {
-			'width': 3,
-			'line-color': '#ccc',
-			'target-arrow-color': '#ccc',
-			'target-arrow-shape': 'triangle',
-			'label': 'data(label)'
-		  }
-		}
-	  ],
+    {
+      selector: 'edge',
+      style: {
+      'width': 3,
+      'line-color': '#ccc',
+      'target-arrow-color': '#ccc',
+      'target-arrow-shape': 'triangle',
+      'label': 'data(label)'
+      }
+    }
+    ],
 
-	});
+  });
 
-	function generate_graph(data, cytoscape) {
-	  var node = cytoscape.add({})
-	  var label = data['cg:id'] || 'UNNAMED'
-    if ('cg:type' in data) {
+  function generate_graph(data, cytoscape) {
+    var node = cytoscape.add({})
+    var label = data['cg:id'] || 'UNNAMED'
+    if (data instanceof Object && 'cg:type' in data) {
       label += ' (' + data['cg:type'] + ')'
     }
     label += '\n'
-	  Object.keys(data).forEach(function (k, index) {
-		if ((k === 'explanation') || (k === 'description') || (k === 'cg:id') || (k === 'cg:type')) {
-			return;
-		}
-		var v = data[k]
-		if (typeof(v) === 'string' || typeof(v) === 'number' || typeof(v) === 'boolean') {
-		  label += k + ": " + v + '\n'
-		} else if (Array.isArray(v)) {
-		  v.forEach(function (x) {
-			var child = generate_graph(x, cytoscape)
-			cytoscape.add({data: {
-			  label: k, source: node.id(), target: child.id()}})
-		  })
-		} else {
-		  var child = generate_graph(v, cytoscape)
-		  cytoscape.add({data: {
-			label: k, source: node.id(), target: child.id()}})
-		}
-	  })
-	  node.json({data: {label: label}})
-	  return node
-	}
+    Object.keys(data).forEach(function (k, index) {
+    if ((k === 'explanation') || (k === 'description') || (k === 'cg:id') || (k === 'cg:type')) {
+      return;
+    }
+    var v = data[k]
+    if (typeof(v) === 'string' || typeof(v) === 'number' || typeof(v) === 'boolean') {
+      label += k + ": " + v + '\n'
+    } else if (Array.isArray(v)) {
+      v.forEach(function (x) {
+      var child = generate_graph(x, cytoscape)
+      cytoscape.add({data: {
+        label: k, source: node.id(), target: child.id()}})
+      })
+    } else {
+      var child = generate_graph(v, cytoscape)
+      cytoscape.add({data: {
+      label: k, source: node.id(), target: child.id()}})
+    }
+    })
+    node.json({data: {label: label}})
+    return node
+  }
 
-	var root = generate_graph(data, cy)
-	// cy.layout({name: 'breadthfirst', directed: true, spacingFactor: 0.5, roots: [root.id()]})
+  var root = generate_graph(data, cy)
+  // cy.layout({name: 'breadthfirst', directed: true, spacingFactor: 0.5, roots: [root.id()]})
 
   var layout = function(noop=false) {
     if (noop) return;
@@ -162,30 +162,30 @@ function render_diagram(data) {
 
   layout()
 
-	cy.on('tap', function(evt) {
+  cy.on('tap', function(evt) {
     cy.elements().clearQueue()
-	  var node = evt.cyTarget;
+    var node = evt.cyTarget;
     console.log(node.data())
     toggleCollapsed(node)
-	})
+  })
 
-	return cy;
+  return cy;
 }
 
 if (window.location.hash) {
-	var exampleId = window.location.hash.substring(1);
-	var req = new XMLHttpRequest();
-	var url = '../../json/' + exampleId + '.json';
-	req.onreadystatechange = function () {
-		if (this.readyState == 4 && this.status == 200) {
-			window['cyto'] = render_diagram(JSON.parse(this.responseText))
-		}
-	}
-	req.open('GET', url, true);
-	req.send();
+  var exampleId = window.location.hash.substring(1);
+  var req = new XMLHttpRequest();
+  var url = '../../json/' + exampleId + '.json';
+  req.onreadystatechange = function () {
+    if (this.readyState == 4 && this.status == 200) {
+      window['cyto'] = render_diagram(JSON.parse(this.responseText))
+    }
+  }
+  req.open('GET', url, true);
+  req.send();
 } else {
-	// should somehow display an error here...
+  // should somehow display an error here...
 }
-	</script>
+  </script>
 </body>
 </html>
