fallback to local if network/cdn is down

--- a/source/tech/details/details.html
+++ b/source/tech/details/details.html
@@ -88,7 +88,9 @@ td.rowheader {
   <svg id="diagram" width="1600" height="800"></svg>
   <script src="https://d3js.org/d3.v4.min.js"></script>
   <script src="https://d3js.org/d3-selection-multi.v1.min.js"></script>
+  <script>window.d3 || document.write('<script src="../../javascripts/cache/d3.v4.min.js">\x3C/script><script src="../../javascripts/cache/d3-selection-multi.v1.min.js">\x3C/script>')</script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.2.6/ace.js"></script>
+  <script>window.ace || document.write('<script src="../../javascripts/cache/ace.js">\x3C/script>')</script>
   <script>
 
 var json_table_recurse = function(sel) {
